alb.tf
resource "aws_lb" "app_alb" {
  name               = "${var.app_name}-alb"
  internal           = false
  load_balancer_type = "application"
  subnets            = [for subnet in aws_subnet.public : subnet.id]

  security_groups = [aws_security_group.web_sg.id]

  tags = {
    Name = "${var.app_name}-alb"
  }
}

resource "aws_lb_target_group" "web_tg" {
  name     = "${var.app_name}-web-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 30 # every 30 seconds
    timeout             = 5 # wait 5 seconds before timing out
    healthy_threshold   = 5 # mark as healthy after 5 successful checks
    unhealthy_threshold = 2 # mark as unhealthy after 2 failed checks
  }

  tags = {
    Name = "${var.app_name}-web-tg"
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.app_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.web_tg.arn
  }
}

# Internal ALB for Application Tier
resource "aws_lb" "app_internal_alb" {
  name               = "${var.app_name}-app-internal-alb"
  internal           = true
  load_balancer_type = "application"
  subnets            = [for subnet in aws_subnet.private : subnet.id]

  security_groups = [aws_security_group.app_sg.id]

  tags = {
    Name = "${var.app_name}-app-internal-alb"
  }
}

resource "aws_lb_target_group" "app_tg" {
  name     = "${var.app_name}-app-tg"
  port     = 8080
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 5
    unhealthy_threshold = 2
  }

  tags = {
    Name = "${var.app_name}-app-tg"
  }
}

resource "aws_lb_listener" "app_listener" {
  load_balancer_arn = aws_lb.app_internal_alb.arn
  port              = "8080"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app_tg.arn
  }
}
